Fixed an html invalidation

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,15 +9,14 @@
 
 
 <div class="navigator">
-    <picture>
-        <a href="index.html"><img src="assets/home.png" alt="homeIcon"></a>
-    </picture>
+    <a href="index.html"><img src="assets/home.png" alt="homeIcon"></a>
     <label><input name="color-scheme" type="radio" value="light" checked>Light</label>
     <label><input name="color-scheme" type="radio" value="dark">Dark</label>
     <ul class="menu">
         <li><a class="active" href="aboutMe.html">About Me</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="projects.html">Projects</a></li>
+        <li><a href="form-no-js.html">Contact</a></li>
     </ul>
 </div>
 
