--- a/form-with-js.html
+++ b/form-with-js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="form-no-js.css">
+    <link rel="stylesheet" type="text/css" href="form-with-js.css">
 <title>Contact Form</title>
 </head>
 <body>
@@ -10,8 +10,7 @@
 
 <div class="navigator">
     <a href="index.html"><img src="assets/home.png" alt="homeIcon"></a>
-    <label><input name="color-scheme" type="radio" value="light" checked>Light</label>
-    <label><input name="color-scheme" type="radio" value="dark">Dark</label>
+    <button id="toggleTheme">Theme Toggle</button>
     <ul class="menu">
         <li><a class="active" href="aboutMe.html">About Me</a></li>
         <li><a href="resume.html">Resume</a></li>
@@ -49,6 +48,6 @@
     <p>Author: <strong>Jose Arteaga</strong></p>
 </footer>
 <script src="script.js"></script>
-
+<script src="theme.js"></script>
 </body>
 </html>
