--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
 <div class="navigator">
     <a href="index.html"><img src="assets/home.png" alt="homeIcon"></a>
-    <label><input name="color-scheme" type="radio" value="light" checked>Light</label>
-    <label><input name="color-scheme" type="radio" value="dark">Dark</label>
+    <button id="toggleTheme">Theme Toggle</button>
     <ul class="menu">
         <li><a class="active" href="aboutMe.html">About Me</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="form-no-js.html">Contact</a></li>
+        <li><a href="form-with-js.html">Contact</a></li>
     </ul>
 </div>
 <main>
@@ -32,5 +31,6 @@
 <footer class="ja">
     <p>Author: <strong>Jose Arteaga</strong></p>
 </footer>
+<script src="theme.js"></script>
 </body>
 </html>
